# SampleRateTap

./: .clang-format  .clang-tidy  .git-blame-ignore-revs  .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: book-pages.yml  ci-arm64.yml  ci.yml  compare.yml  style.yml
bench/: CMakeLists.txt  baselines.json  bench_asrc.cpp
bench/compare/: CMakeLists.txt  bench_compare.cpp
bench/icount/: CMakeLists.txt  cmp_main.cpp  icount_main.cpp
book/: book.toml
book/src/: SUMMARY.md  introduction.md
book/src/appendix/: bibliography.md  cpp-decisions.md  glossary.md  two-budgets.md
book/src/epilogue/: letter.md
book/src/part0/: budgets.md  two-crystals.md
book/src/part1/: asrc.md  fractional-resampler.md  kaiser.md  pi-servo.md  polyphase-bank.md  sample-traits.md  spsc-ring.md
book/src/part2/: icount.md  notebooks.md  tests.md
book/src/part3/: c1-c2.md  c3-c5.md  c6.md
book/src/part4/: c-abi.md  cortex-m.md  hexagon.md
book/src/part5/: hardware.md  scaling.md
cmake/: arm-cortex-m33-mps2.cmake  arm-cortex-m55-mps3.cmake  hexagon-linux-musl.cmake
docs/: COMPARISON.md  Doxyfile  HARDWARE_TESTING.md  PERFORMANCE.md
examples/: CMakeLists.txt  alsa_bridge.cpp  drifting_clocks.cpp
examples/pico2_cyccnt/: CMakeLists.txt  README.md  main.cpp
examples/pico2_dualcore/: CMakeLists.txt  README.md  main.cpp
include/srt/: asrc.h  asrc.hpp  pi_servo.h  pi_servo.hpp  polyphase_filter.h  polyphase_filter.hpp  sample_traits.h  sample_traits.hpp  spsc_ring.h  spsc_ring.hpp  srt.h  srt.hpp
include/srt/detail/: kaiser.h  kaiser.hpp
notebooks/: asrc_block_size_study.ipynb  asrc_comparison.ipynb  asrc_demo.ipynb  asrc_rbj_analysis.ipynb
platform/: armv8m_startup.c
platform/mps2_an505/: mps2_an505.ld
platform/mps3_an547/: mps3_an547.ld  startup_an547.c
scripts/: book_figures.py  book_figures_trace.cpp  icount.py  update_icount_docs.py  update_perf_docs.py
tests/: CMakeLists.txt  bare_metal_main.cpp  test_asrc_lock.cpp  test_asrc_program.cpp  test_asrc_quality.cpp  test_asrc_quality_16k.cpp  test_fade.cpp  test_fixed_point.cpp  test_hardening.cpp  test_kaiser.cpp  test_latency.cpp  test_multichannel.cpp  test_polyphase.cpp  test_servo.cpp  test_spsc_ring.cpp  test_spsc_ring_threads.cpp
tests/support/: multitone_analysis.h  multitone_analysis.hpp  sine_analysis.h  sine_analysis.hpp  two_clock_sim.h  two_clock_sim.hpp
tools/capi/: CMakeLists.txt  srt_capi.cpp  srt_capi.h
tools/qemu_insn_plugin/: insn_count.c
